fix overflow problem

--- a/app/assets/stylesheets/listings.css
+++ b/app/assets/stylesheets/listings.css
@@ -14,6 +14,10 @@
   padding-left: 30px;
 }
 
+.listing-details-container {
+  overflow: auto;
+}
+
 .listing-main-img {
   height: 100%;
   /*height: auto;*/
